data/derived/fa15/progs/unify/prog0427.ml.out
Characters 19-20:
  let _ = mulByDigit 9 [9;9;9;9];;
                     ^
Error: This expression has type int but an expression was expected of type
         'a -> int * int list
